inital integration with the reciept parser
